--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
             </fieldset>
             <fieldset class="setup-product__makers-block">
               <legend class="setup-product__group-title">Производители:</legend>
-              <p class="setup-product__makers-item">
+              <p class="setup-product__makers-item"> <!--Тут нужно добавить список-->
                 <label for="bosch">Bosch</label>
                 <input class="setup-product__makers-field" type="checkbox" id="bosch" checked>
               </p>
@@ -169,7 +169,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 3000">
+                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 3000
@@ -185,7 +185,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 6000">
+                  <img class="item-card__product-image" src="img/catalog-item-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 6000
@@ -201,7 +201,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 2000">
+                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 2000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 2000
@@ -215,7 +215,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 3000">
+                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 3000
@@ -231,7 +231,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 6000">
+                  <img class="item-card__product-image" src="img/catalog-item-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 6000
@@ -247,7 +247,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 2000">
+                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 2000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 2000
@@ -261,7 +261,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 3000">
+                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 3000
@@ -277,7 +277,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 6000">
+                  <img class="item-card__product-image" src="img/catalog-item-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 6000
@@ -293,7 +293,7 @@
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
                   <h4 class="visually-hidden">Карточка товара</h4>
-                  <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 2000">
+                  <img class="item-card__product-image" src="img/catalog-item-1.jpg" width="126" height="112" alt="Перфоратор BOSCH BFG 2000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
                     BFG 2000
