--- a/catalog.html
+++ b/catalog.html
@@ -108,37 +108,41 @@
             </fieldset>
             <fieldset class="setup-product__makers-block">
               <legend class="setup-product__group-title">Производители:</legend>
-              <p class="setup-product__makers-item"> <!--Тут нужно добавить список-->
-                <label for="bosch">Bosch</label>
-                <input class="setup-product__makers-field" type="checkbox" id="bosch" checked>
-              </p>
-              <p class="setup-product__makers-item">
-                <label for="интерскол">Интерскол</label>
-                <input class="setup-product__makers-field" type="checkbox" id="интерскол">
-              </p>
-              <p class="setup-product__makers-item">
-                <label for="makita">Makita</label>
-                <input class="setup-product__makers-field" type="checkbox" id="makita" checked>
-              </p>
-              <p class="setup-product__makers-item">
-                <label for="makita">Dewalt</label>
-                <input class="setup-product__makers-field" type="checkbox" id="dewalt">
-              </p>
-              <p class="setup-product__makers-item">
-                <label for="hitachi">Hitachi</label>
-                <input class="setup-product__makers-field" type="checkbox" id="hitachi">
-              </p>
+              <ul class="setup-product__makers-list">
+                <li class="setup-product__makers-item">
+                  <label for="bosch">Bosch</label>
+                  <input class="setup-product__makers-field" type="checkbox" id="bosch" checked>
+                </li>
+                <li class="setup-product__makers-item">
+                  <label for="интерскол">Интерскол</label>
+                  <input class="setup-product__makers-field" type="checkbox" id="интерскол">
+                </li>
+                <li class="setup-product__makers-item">
+                  <label for="makita">Makita</label>
+                  <input class="setup-product__makers-field" type="checkbox" id="makita" checked>
+                </li>
+                <li class="setup-product__makers-item">
+                  <label for="makita">Dewalt</label>
+                  <input class="setup-product__makers-field" type="checkbox" id="dewalt">
+                </li>
+                <li class="setup-product__makers-item">
+                  <label for="hitachi">Hitachi</label>
+                  <input class="setup-product__makers-field" type="checkbox" id="hitachi">
+                </li>
+              </ul>
             </fieldset>
             <fieldset class="setup-product__charge-type">
               <legend class="setup-product__group-title">Питание:</legend>
-              <p class="setup-product__charge-item">
-                <label for="storage-battery">Аккумуляторные</label>
-                <input class="setup-product__charge-field" type="radio" name="charge-type" value="storage-battery" id="storage-battery">
-              </p>
-              <p class="setup-product__charge-item">
-                <label for="network-charging">Сетевые</label>
-                <input class="setup-product__charge-field" type="radio" name="charge-type" value="network-charging" id="network-charging">
-              </p>
+              <ul class="setup-product__charge-list">
+                <li class="setup-product__charge-item">
+                  <label for="storage-battery">Аккумуляторные</label>
+                  <input class="setup-product__charge-field" type="radio" name="charge-type" value="storage-battery" id="storage-battery">
+                </li>
+                <li class="setup-product__charge-item">
+                  <label for="network-charging">Сетевые</label>
+                  <input class="setup-product__charge-field" type="radio" name="charge-type" value="network-charging" id="network-charging">
+                </li>
+              </ul>
             </fieldset>
             <button class="setup-product__button-show">Показать</button>
           </form>
