Подготовка вёрстки к построениею сетки

--- a/catalog.html
+++ b/catalog.html
@@ -77,18 +77,20 @@
       </div>
     </header>
     <main>
-      <ul class="breadcrumbs">
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="#">Каталог</a>
-        </li>
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="#">Инструмент</a>
-        </li>
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="#">Перфораторы</a>
-        </li>
-      </ul>
-      <h2 class="page-title">Перфораторы</h2>
+      <header class="page-header">
+        <ul class="page-header__breadcrumbs">
+          <li class="page-header__item">
+            <a class="page-header__link" href="#">Каталог</a>
+          </li>
+          <li class="page-header__item">
+            <a class="page-header__link" href="#">Инструмент</a>
+          </li>
+          <li class="page-header__item">
+            <a class="page-header__link" href="#">Перфораторы</a>
+          </li>
+        </ul>
+        <h2 class="page-header__title">Перфораторы</h2>
+      </header>
       <div class="catalog-settings">
         <div class="setup">
           <div class="setup-header">
