Небольшие поправки в разметке

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
             <div class="main-header__user-profile">
               <input class="main-header__user-avatar" type="file">
               <a class="main-header__user-name" href="#">Дима Кувалда</a>
-              <button class="main-header__profile-exit" type="button">Выход из профиля</button>
+              <a class="main-header__profile-exit" href="#">Выход из профиля</a>
               <ul class="main-header__user-profile-list">
                 <li class="main-header__user-profile-item">
                   <a class="main-header__user-profile-link" href="#">Мои заказы</a>
@@ -407,11 +407,11 @@
         <div class="main-footer__developers">
           <p class="main-footer__developers-feedback">
               Обратная связь:
-              <span class="main-footer__developer-name">mail@htmlacademy.ru</span>
+              <a class="main-footer__developer-name" href="#">mail@htmlacademy.ru</a>
           </p>
           <p class="main-footer__developers-cutaway">
               Разработано —
-              <span class="main-footer__developer-name">htmlacademy.ru</span>
+              <a class="main-footer__developer-name" href="#">htmlacademy.ru</a>
           </p>
         </div>
       </div>
