Создание раскладки крупный блоков шапки

--- a/index.html
+++ b/index.html
@@ -8,112 +8,120 @@
   <body>
     <header class="main-header">
       <div class="main-header__middle-column">
-        <h1 class="main-header__page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        <div class="main-header__header-feedback header-feedback">
-          <span class="header-feedback__phone-number">+7 (812) 555-05-55</span>
-          <p class="header-feedback__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <div class="centering-block">
+          <h1 class="main-header__page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+          <div class="main-header__header-feedback header-feedback">
+            <span class="header-feedback__phone-number">+7 (812) 555-05-55</span>
+            <p class="header-feedback__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <ul class="main-header__user-navigation">
+            <li class="main-header__user-navigation-item">
+              <a class="main-header__user-navigation-link" href="#">Войти</a>
+            </li>
+            <li class="main-header__user-navigation-item">
+              <a class="main-header__user-navigation-link" href="#">Регистрация</a>
+            </li>
+          </ul>
         </div>
-        <ul class="main-header__user-navigation">
-          <li class="main-header__user-navigation-item">
-            <a class="main-header__user-navigation-link" href="#">Войти</a>
-          </li>
-          <li class="main-header__user-navigation-item">
-            <a class="main-header__user-navigation-link" href="#">Регистрация</a>
-          </li>
-        </ul>
       </div>
       <div class="main-header__top-column">
-        <div class="main-header__logo-block">
-          <a class="main-header__logo-link">Техномарт</a>
-        </div>
-        <div class="main-header__search-block">
-          <input class="main-header__search-field" type="search" placeholder="Поиск">
-        </div>
-        <div class="main-header__bookmarks-block">
-          <p class="main-header__bookmarks-text">Закладки <span class="main-header__bookmarks-counter">0</span></p>
-        </div>
-        <div class="main-header__cart-block">
-          <p class="main-header__cart-text">Корзина <span class="main-header__cart-counter">0</span></p>
-        </div>
-        <div class="main-header__buy-block">
-          <a class="main-header__buy-button" href="#">Оформить заказ</a>
+        <div class="centering-block">
+          <div class="main-header__logo-block">
+            <a class="main-header__logo-link">Техномарт</a>
+          </div>
+          <div class="main-header__search-block">
+            <input class="main-header__search-field" type="search" placeholder="Поиск">
+          </div>
+          <div class="main-header__bookmarks-block">
+            <p class="main-header__bookmarks-text">Закладки <span class="main-header__bookmarks-counter">0</span></p>
+          </div>
+          <div class="main-header__cart-block">
+            <p class="main-header__cart-text">Корзина <span class="main-header__cart-counter">0</span></p>
+          </div>
+          <div class="main-header__buy-block">
+            <a class="main-header__buy-button" href="#">Оформить заказ</a>
+          </div>
         </div>
       </div>
       <div class="main-header__bottom-column">
-        <nav class="main-navigation">
-          <ul class="main-navigation__list">
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Главная</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Компания</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="catalog.html">Каталог</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Новости</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Спецпредложение</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Доставка</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="centering-block">
+          <nav class="main-navigation">
+            <ul class="main-navigation__list">
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="#">Главная</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="#">Компания</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="catalog.html">Каталог</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="#">Новости</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="#">Спецпредложение</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="#">Доставка</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
     <main>
       <section class="service-presentation">
         <h2 class="visually-hidden">Презентация услуг интернет-магазина</h2>
-        <section class="material-category service-presentation__material-category">
-          <h3 class="material-category__title">Материалы</h3>
-          <a class="material-category__link" href="#">На любой вкус</a>
-        </section>
-        <section class="tools-category service-presentation__tools-category">
-          <h3 class="tools-category__title">Инструмент</h3>
-          <a class="tools-category__link" href="#">На все случаи</a>
-        </section>
-        <section class="machinery-category service-presentation__machinery-category">
-          <h3 class="machinery-category__title">Техника</h3>
-          <a class="machinery-category__link" href="#">Для стройки</a>
-        </section>
-        <section class="product-slider service-presentation__product-slider">
-          <h3 class="visually-hidden">Лучшие категории товаров</h3>
-          <article class="product-slider__slide-item">
-            <div class="product-slider__perforators-slide">
-              <h4 class="product-slider__slide-title">Перфораторы</h4>
-              <p class="product-slider__slide-slogan">Настоящие мужские игрушки</p>
-              <img src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
-            </div>
-            <div class="product-slider__drills-slide">
+        <div class="centering-block centering-block--presentation-block">
+          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--material-category">
+            <h3 class="presentation-category__title presentation-category__title--material-title">Материалы</h3>
+            <a class="presentation-category__link presentation-category__link--material-link" href="#">На любой вкус</a>
+          </section>
+          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--tools-category">
+            <h3 class="presentation-category__title presentation-category__title--tools-title">Инструмент</h3>
+            <a class="presentation-category__link presentation-category__link--tools-link" href="#">На все случаи</a>
+          </section>
+          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--machinery-category">
+            <h3 class="presentation-category__title presentation-category__title--machinery-title">Техника</h3>
+            <a class="presentation-category__link presentation-category__link--machinery-link" href="#">Для стройки</a>
+          </section>
+          <section class="product-slider service-presentation__product-slider">
+            <h3 class="visually-hidden">Лучшие категории товаров</h3>
+            <article class="product-slider__slide-item">
+              <div class="product-slider__perforators-slide">
+                <h4 class="product-slider__slide-title">Перфораторы</h4>
+                <p class="product-slider__slide-slogan">Настоящие мужские игрушки</p>
+                <img src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
+              </div>
+              <div class="product-slider__drills-slide">
                 <h4 class="product-slider__slide-title">Дрели</h4>
                 <p class="product-slider__slide-slogan">Соседям на радость!</p>
                 <img src="img/drill-slide.jpg" width="620" height="266" alt="Изображение строителя с дрелью">
-            </div>
-            <div class="product-slider__buttons-block">
-              <button class="product-slider__button-prev" type="button">Предыдущий слайд</button>
-              <button class="product-slider__button-next" type="button">Следующий слайд</button>
-            </div>
-            <a class="product-slider__slide-link button" href="#">Открыть каталог</a>
-            <div class="product-slider__toggle-block">
-              <label class="product-slider__toggle-slide">Открыть слайд с перфораторами</label>
-              <label class="product-slider__toggle-slide">Открыть слайд с дрелями</label>
-            </div>
-          </article>
-        </section>
-        <section class="discounts-category service-presentation__discounts-category">
-          <h3 class="discounts-category__title">Скидки 50%</h3>
-          <a class="discounts-category__link" href="#">На 350 товаров</a>
-        </section>
-        <section class="delivery-category service-presentation__delivery-category">
-          <h3 class="delivery-category__title">Доставка</h3>
-          <a class="delivery-category__link" href="#">Бесплатно</a>
-        </section>
+              </div>
+              <div class="product-slider__buttons-block">
+                <button class="product-slider__button-prev" type="button">Предыдущий слайд</button>
+                <button class="product-slider__button-next" type="button">Следующий слайд</button>
+              </div>
+              <a class="product-slider__slide-link button" href="#">Открыть каталог</a>
+              <div class="product-slider__toggle-block">
+                <label class="product-slider__toggle-slide">Открыть слайд с перфораторами</label>
+                <label class="product-slider__toggle-slide">Открыть слайд с дрелями</label>
+              </div>
+            </article>
+          </section>
+          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--discounts-category">
+            <h3 class="presentation-category__title presentation-category__title--discounts-title">Скидки 50%</h3>
+            <a class="presentation-category__link presentation-category__link--discounts-link" href="#">На 350 товаров</a>
+          </section>
+          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--delivery-category">
+            <h3 class="presentation-category__title presentation-category__title--delivery-title">Доставка</h3>
+            <a class="presentation-category__link presentation-category__link--delivery-link" href="#">Бесплатно</a>
+          </section>
+        </div>
       </section>
       <section class="top-products">
         <header class="top-products__head-block">
